Fixes for SEAD-83, SEAD-92, SEAD-155, and SEAD-163. Multi-line user metadata supported by using TextBox, <Pre> tags for display and updating CSS to display <pre> blocks better. In making that change, I shifted the metadata display to have a separate search link in the action column rather than having the value be a search hyperlink. Also added publication date to the default list of user metadata fields since this is what triggers display in the 'nced' interface.

--- a/edu.illinois.ncsa.mmdb.web/war/mmdb.css
+++ b/edu.illinois.ncsa.mmdb.web/war/mmdb.css
@@ -12,6 +12,14 @@ body {
 	
 }
 
+pre {
+   font-family: "courier new", courier, monospace;
+   font-size: 0.9em;
+   white-space: pre-wrap; /* CSS2.1 compliant */
+   white-space: -moz-pre-wrap; /* Mozilla-based browsers */
+   white-space: o-pre-wrap; /* Opera 7+ */
+}
+
 .mainMenu, .mainContainer, .bottomMenu {
 	font-size: 0.9em;
 	width: 1000px;
